Update 6.2 Conduct security controls testing.md

--- a/DOMAIN6: Security Assessment and Testing/6.2 Conduct security controls testing.md
+++ b/DOMAIN6: Security Assessment and Testing/6.2 Conduct security controls testing.md
@@ -361,3 +361,64 @@ For example, a company could set up synthetic tests to alert the security team a
 10. How do synthetic transactions and RUM complement each other in detecting login issues?
 
 <details> <summary>Show answer</summary> Synthetic transactions can detect if the login system breaks at night when no users are active, while RUM can highlight login troubles during the day when many real users encounter the same issue, helping security teams catch both types of problems. </details>
+
+---
+
+## 6.2.5 Code review and testing ##
+
+In cybersecurity, code review and testing are critical to catching vulnerabilities before attackers do. Whether you’re part of a secure development lifecycle (SDLC), auditing third-party code, or helping developers fix security issues, knowing how code gets reviewed and tested can help you spot weak points and suggest better defenses.
+
+**Code review** is the process of manually or automatically checking source code for errors, weaknesses, or security vulnerabilities before the software is released. A code review is usually done by a peer or a team of experts and focuses on quality, readability, logic, and — of course — security
+
+For cybersecurity professionals, code reviews are a chance to detect common security flaws like:
+- Hardcoded credentials.
+- SQL injection risks.
+- Poor input validation.
+- Insecure API usage.
+- Misuse of crypto libraries.
+
+**Manual code reviews** can spot logic flaws and misuse of security features that automated tools might miss. **Automated reviews** (using static analysis tools) are great for finding repetitive coding mistakes and enforcing secure coding standards.
+
+A Fagan inspection is a structured, formal type of code review introduced by Michael Fagan in the 1970s. Unlike casual peer reviews, Fagan inspections follow a strict process with clear roles, steps, and documentation.
+The inspection usually goes like this:
+
+| Step              | Description                                        |
+|-------------------|----------------------------------------------------|
+| Planning          | The inspection team is selected, and the code is prepared. |
+| Overview          | The author explains the design and logic to the reviewers. |
+| Preparation       | Reviewers study the code individually.             |
+| Inspection Meeting| Reviewers meet to discuss and document defects.    |
+| Rework            | The author fixes the problems.                     |
+| Follow-up         | Reviewers verify the fixes.                        |
+
+:bulb: In security, Fagan Inspection is especially useful for catching design-level problems and enforcing accountability, since every step is documented and roles (author, moderator, reviewer) are clearly separated.
+
+**Static testing** means reviewing code, configuration, or architecture without executing the program. This includes both human code reviews and automated static analysis tools.
+Static testing is valuable because it can detect bugs and vulnerabilities early, even before the software runs. Common findings include buffer overflows, hardcoded secrets, weak cryptographic practices, and insecure input handling.
+For cybersecurity, static testing is often the first line of defense — allowing secure-by-design principles to be enforced from the start.
+
+**Dynamic testing**, unlike static testing, runs the application and observes how it behaves in real time. Dynamic testing looks for security vulnerabilities like:
+- SQL Injection.
+- Cross-site scripting (XSS).
+- Authentication bypass.
+- Memory corruption
+
+Dynamic testing tools (DAST — Dynamic Application Security Testing) don’t need access to the source code. Instead, they interact with the running application, much like an attacker would, which makes them ideal for identifying vulnerabilities in the final deployed environment.
+Dynamic testing can be automated (via tools like Burp Suite) or manual, where testers craft custom attack payloads based on the app’s responses.
+
+In **black box testing**, the tester has no knowledge of the application’s internals. The goal is to assess the system from an outsider’s perspective — just like a real attacker would.
+In security, black box testing is commonly used for: Penetration testing,  Vulnerability scanning,  system integration testing.
+
+:bulb: Since the tester doesn't rely on code access, black box testing is great for finding issues in real-world scenarios, such as broken access control, insecure server configurations, and input validation flaws.
+
+**White box testing** (sometimes called clear box or transparent testing) is the opposite of black box testing. Here the tester has full knowledge of the source code, architecture, and internal logic.
+This allows for deep coverage of edge cases, like:
+- Identification of hidden vulnerabilities (logic errors, unsafe code paths).
+- Security testing of cryptographic implementations.
+- Verification of input validation, error handling, and boundary conditions.
+- White box testing is often combined with static analysis to ensure that both code and design are secure.
+
+:necktie: The most secure systems use a combination of all these practices — with static and white box techniques catching issues during development, and dynamic and black box methods simulating real-world attacks before and after release.
+
+### Open Questions ###
+
