--- a/DOMAIN6: Security Assessment and Testing/6.2 Conduct security controls testing.md
+++ b/DOMAIN6: Security Assessment and Testing/6.2 Conduct security controls testing.md
@@ -422,3 +422,140 @@ This allows for deep coverage of edge cases, like:
 
 ### Open Questions ###
 
+1. What is the main purpose of a code review in software development?  
+<details>
+  <summary>Show answer</summary>
+The main purpose of a code review is to find mistakes, improve code quality, and catch potential security vulnerabilities before the software is released. It also helps enforce coding standards and share knowledge within the team.
+</details>
+
+2. How does a Fagan inspection differ from a casual code review?  
+<details>
+  <summary>Show answer</summary>
+A Fagan inspection is a formal and structured process that involves planning, preparation, and follow-ups, unlike casual code reviews which are often more informal and flexible. Fagan inspections focus on defect prevention and documentation.
+</details>
+
+3. Why is static testing important for cybersecurity?  
+<details>
+  <summary>Show answer</summary>
+Static testing helps identify security issues like hardcoded credentials, unsafe input handling, or insecure coding practices early in development. This allows teams to fix vulnerabilities before the software runs in production.
+</details>
+
+4. When in the development cycle is static testing usually performed?  
+<details>
+  <summary>Show answer</summary>
+Static testing is usually performed during the coding and design phase, before the software is executed. This makes it cost-effective for catching problems early.
+</details>
+
+5. What is dynamic testing, and how does it help in finding vulnerabilities?  
+<details>
+  <summary>Show answer</summary>
+Dynamic testing involves running the application and observing its behavior under real conditions. It helps detect runtime vulnerabilities like SQL injection, XSS, or logic flaws that static testing might miss.
+</details>
+
+6. What is the main difference between black box testing and white box testing?  
+<details>
+  <summary>Show answer</summary>
+Black box testing tests an application from an external perspective, without knowing its internal code or logic. White box testing, on the other hand, uses full knowledge of the system's internal structure to guide testing.
+</details>
+
+7. Why is black box testing useful for security assessments?  
+<details>
+  <summary>Show answer</summary>
+Black box testing is useful for simulating real-world attacker behavior, as it reveals how the application handles unexpected input and interaction. It’s commonly used in penetration testing.
+</details>
+
+8. How does white box testing help identify deeper vulnerabilities?  
+<details>
+  <summary>Show answer</summary>
+White box testing allows testers to explore hidden code paths, internal logic, and security controls that wouldn’t be visible from the outside. This makes it ideal for finding deep logic errors and unsafe code.
+</details>
+
+9. Why is combining static and dynamic testing considered a best practice in security?  
+<details>
+  <summary>Show answer</summary>
+Combining static and dynamic testing gives better security coverage, since static testing can catch coding flaws early and dynamic testing can reveal runtime issues under real-world conditions. Both approaches complement each other.
+</details>
+
+10. How can Fagan inspections help improve security and code quality?  
+<details>
+  <summary>Show answer</summary>
+Fagan inspections improve security by forcing developers and reviewers to methodically analyze code, reducing the chance of missing logic errors or insecure patterns. The structured process also creates clear accountability and documentation.
+</details>
+
+
+## 6.2.6 Misuse case testing ##
+
+A **use case** describes how a system is supposed to behave when everything is working as intended. In software design, a use case defines a specific interaction between a user (or another system) and the software.For example, for an online banking application, a use case might be:“A customer logs in, views their balance, and transfers money to another account.”
+
+**Use case testing** is the process of turning these expected behaviors into test scenarios, and verifying whether the system responds correctly. This helps confirm that:
+- Legitimate users can complete their tasks.
+- The system produces the expected output.
+- Security mechanisms like input validation or authentication don’t break normal operations.
+
+:necktie: From a cybersecurity perspective, use case testing helps ensure security features don’t harm usability, and that security measures don’t block legitimate actions. This is important for real-world applications, where overprotective security can sometimes cause downtime or user frustration.
+
+While use cases focus on “how things should work”, **misuse cases** focus on “how things could go wrong.” A misuse case is a scenario where an attacker (or malicious user) tries to abuse the system in unexpected or harmful ways. For example: “An attacker tries to bypass the login by using SQL injection in the username field.”
+
+Misuse case testing is a mindset shift: you ask “what could an attacker do here?” rather than “what should a customer do?” You design test scenarios where the goal is not to confirm expected behavior, but to see if the system:
+- Rejects invalid inputs.
+- Detects or blocks malicious activities.
+- Handles abuse gracefully (no crashes or data leaks).
+
+For security professionals, misuse case testing is an important technique to think like an attacker. It can reveal gaps in validation, error handling, and authorization that normal functional testing wouldn’t catch.
+
+**UML (Unified Modeling Language)** is a standardized way to visualize a system’s design and behavior using diagrams. UML is often used by developers and architects, but security experts can also benefit from it, especially when preparing threat models or designing security controls.
+
+Some of the most useful UML diagrams for security work are:
+- Use Case Diagrams — to map user interactions with the system.
+- Misuse Case Diagrams — a simple extension of use case diagrams, where attackers (or “malicious actors”) are shown trying to subvert the system.
+- Sequence Diagrams — to show the order of operations or messages exchanged between system components. This can highlight attack surfaces.
+- Class Diagrams — to represent the structure of the system, including relationships between modules, classes, and components.
+
+:necktie: Security isn’t just about scanning and patching — it’s about designing systems that are secure by default and by design. Use case testing ensures the system works as intended. Misuse case testing ensures the system handles attacks safely. UML helps you communicate both.
+
+### Open Questions ###
+
+1. What is the main goal of use case testing in cybersecurity?  
+<details>
+  <summary>Show answer</summary>
+The main goal of use case testing is to make sure that a system works properly for legitimate users by verifying expected behaviors, such as successful logins, transactions, or data retrieval.
+</details>
+
+2. How does misuse case testing help security experts strengthen a system?  
+<details>
+  <summary>Show answer</summary>
+Misuse case testing helps security experts identify how attackers could abuse the system by simulating malicious behaviors, such as inputting harmful data or trying to bypass security controls.
+</details>
+
+3. What is the difference between use case testing and misuse case testing?  
+<details>
+  <summary>Show answer</summary>
+Use case testing checks if the system handles normal, expected user actions correctly, while misuse case testing focuses on how the system reacts to malicious or unexpected actions from attackers.
+</details>
+
+4. How can UML diagrams support security analysis in software development?  
+<details>
+  <summary>Show answer</summary>
+UML diagrams help security teams visualize how a system is designed, including the flow of data, user interactions, and connections between components — making it easier to identify potential weak spots or attack paths.
+</details>
+
+5. Why is it helpful to perform both use case and misuse case testing during software testing?  
+<details>
+  <summary>Show answer</summary>
+Performing both use case and misuse case testing ensures that a system not only works as intended for real users but is also prepared to defend against invalid, harmful, or unexpected actions from attackers.
+</details>
+
+---
+
+## 6.2.7 Coverage Analysis ##
+
+Testing isn’t just about “running some checks” ,  it’s about knowing how much of your code and logic has actually been tested. Test coverage tells you which parts of your code have been exercised by your test cases and which haven’t. The higher the coverage, the lower the chance that an untested part of your system could hide a security vulnerability.
+
+Test coverage is especially important in security-focused development because attackers often exploit the “forgotten” or poorly tested paths in software logic. If a branch, condition, or function hasn’t been tested, no one can guarantee it will behave securely in production.
+
+At its core, test coverage is calculated as:
+
+**Test Coverage (%) = (Number of items tested / Total number of items) × 100**
+
+
+
