Update 1.Q.2 Hard Questions.md

--- a/DOMAIN1: Security and Risk Management/1.Q.2 Hard Questions.md
+++ b/DOMAIN1: Security and Risk Management/1.Q.2 Hard Questions.md
@@ -491,17 +491,41 @@ Doubt about the answer, read again [here](https://github.com/lorenzoleonelli/CIS
 
 <details> <summary>Show answer</summary>
 
-  **Correct Answer: (D) Data localization options**
+  **Correct Answer: (A) Calculate the number of security incidents reported after the training program was implemented and compare this to the number of incidents reported before the training began.**
 
-Comparison of incident rates after training implementation to incident rates before training implementation measures the direct impact of the training program by comparing the frequency of security incidents before and after the training. A decrease in incident rates would indicate that the training is effective in enhancing employee awareness and behavior regarding security threats. This approach provides concrete evidence of how well the training has translated into improved security practices and reduced incidents, making it a valuable metric for evaluating the program's effectiveness.
+This directly measures real-world effectiveness.
+
+If incidents decrease after training, it suggests employees are applying what they learned.
+
+It connects awareness training to the actual security posture of the organization.
+
+This is an outcome-based metric, not just an activity or participation measure.
 
 Wrong Answers:
 
-Percentage of employees who scored above 80% on assessments compared to the total number of employees. This metric focuses on the knowledge retention of employees who participated in the training. It measures how many employees demonstrated a high level of understanding of the material by scoring above a predetermined threshold on assessments. While a high percentage of employees scoring above 80% can indicate that the training content was understood, it does not necessarily reflect whether this knowledge has led to improved security practices or reduced incidents. Therefore, while important, this metric alone does not fully capture the effectiveness of the training.
+(B) Determine the number of employees who achieved a score higher than 80% on the training assessments and divide this by the total number of employees who participated in the training.
 
-Ratio of employees who completed the training to the total number of employees. This metric evaluates participation by calculating the proportion of employees who completed the training program relative to the total number of employees. It indicates how well the training was attended and accepted within the organization. While completion rates can show engagement, they do not provide insights into the training's effectiveness in improving security awareness or changing behavior. A high completion rate does not guarantee that employees learned or retained the necessary skills to mitigate security threats.
+This measures knowledge retention at test time, not whether employees actually change their behavior.
 
-Comparison of incident rates in your company after training implementation to the average incident rates of other companies This metric involves comparing your organization’s incident rates after training with those of similar organizations to assess relative performance in security incidents. While this comparison can provide context for your organization's performance, it does not directly measure the training program's effectiveness within your organization. External factors and varying security postures among different organizations can skew this comparison, making it less reliable as a standalone metric for assessing the training's impact.
+Employees may memorize answers but still click phishing links in real life.
+
+It’s useful for evaluating learning quality, but not sufficient for measuring overall program effectiveness.
+
+(C) Calculate the number of employees who successfully completed the training program and divide this by the total number of employees eligible for the training.
+
+This is a completion/participation metric, not an effectiveness metric.
+
+Just because employees completed the training doesn’t mean it improved security behavior or reduced incidents.
+
+This only proves compliance with HR requirements.
+
+(D) Analyze the number of security incidents reported in your organization after the training program was implemented and compare this with the average incident rates from similar companies in the industry.
+
+Benchmarking against industry is useful for context, but it doesn’t measure the effectiveness of your specific training program.
+
+Differences could be due to company size, industry maturity, or different threat profiles.
+
+It’s not a direct measure of your program’s success.
 
 Doubt about the answer, read again [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.12%20Establish%20and%20maintain%20a%20security%20awareness%2C%20education%2C%20and%20training%20program.md#1121-methods-and-techniques-to-increase-awareness-and-training-eg-social-engineering-phishing-security-champions-gamification)
 </details>
