Update 6.2 Conduct security controls testing.md

--- a/DOMAIN6: Security Assessment and Testing/6.2 Conduct security controls testing.md
+++ b/DOMAIN6: Security Assessment and Testing/6.2 Conduct security controls testing.md
@@ -557,5 +557,277 @@ At its core, test coverage is calculated as:
 
 **Test Coverage (%) = (Number of items tested / Total number of items) × 100**
 
+The “items” depend on what you’re measuring. For example:
+- If you're counting statements: the number of lines of code tested vs. total lines.
+- If you're counting branches: the number of decision paths tested vs. total decision paths.
+- If you're counting functions: the number of functions called vs. total functions in the program.
+
+Types of Test Coverage are:
+
+| Coverage Type     | Description                                                                                              | Example                                                                                           | Security Relevance                                                                                  |
+|-------------------|----------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------|
+| **Statement Coverage** | Measures whether each line of code (statement) has been executed at least once during testing.           | If a program has 100 lines of code and your tests execute 90, your statement coverage is 90%.      | Ensures no part of the code goes completely untested, where hidden bugs and security flaws may exist. |
+| **Branch Coverage**    | Focuses on decision points, like if-else, switch cases, and loops. Ensures every branch is tested.       | An if statement has two paths (true and false) — both must be tested for 100% branch coverage.     | Critical for security, as untested paths may behave incorrectly or leak sensitive data.               |
+| **Condition Coverage** | Tests each individual condition inside compound decisions.                                             | For `if (A && B)`, both A and B must be tested as true and false in various combinations.          | Helps catch cases where individual conditions fail even if the overall decision looks tested.         |
+| **Function Coverage**  | Measures whether each function or method in the code has been called at least once.                    | Verifies that all pieces of the application are exercised, not just common or high-traffic paths.  | Unused/rarely used functions can hide risks like legacy code issues, backdoors, or logic errors.      |
+| **Loop Coverage**      | Verifies loops are tested under all reasonable conditions: zero, one, and multiple iterations.          | Ensures loop behavior is validated under different iteration counts.                              | Prevents errors and security issues such as buffer overflows or infinite loops under attack.           |
+
+### Open Questions ###
+
+1. What is the main purpose of test coverage analysis in software security testing?  
+<details>
+  <summary>Show answer</summary>
+The main purpose of test coverage analysis is to measure how much of a system’s code has been exercised by tests, helping ensure that untested parts don’t hide security vulnerabilities or logic errors.
+</details>
+
+2. What does the test coverage formula measure, and how is it calculated?  
+<details>
+  <summary>Show answer</summary>
+The test coverage formula measures the percentage of tested items (like statements, branches, or functions) compared to the total available items, using:  
+<br>
+Test Coverage (%) = (Number of items tested / Total number of items) × 100.
+</details>
+
+3. Why is branch coverage especially important for detecting security issues?  
+<details>
+  <summary>Show answer</summary>
+Branch coverage is important because it ensures both outcomes of decision points (if-else, switch, etc.) are tested, reducing the risk that attackers could exploit logic paths that were never tested.
+</details>
+
+4. How does loop coverage help improve the security of an application?  
+<details>
+  <summary>Show answer</summary>
+Loop coverage improves security by making sure loops handle all expected scenarios — including zero iterations, one iteration, and many iterations — which helps prevent issues like infinite loops, buffer overflows, or logic bypasses.
+</details>
+
+5. Why isn’t 100% statement coverage alone enough to guarantee secure software?  
+<details>
+  <summary>Show answer</summary>
+100% statement coverage only proves that each line of code ran at least once, but it doesn’t guarantee all possible decision paths, conditions, or edge cases were tested, leaving room for hidden security flaws.
+</details>
+
+---
+
+## 6.2.8 Interface testing (e.g., user interface, network interface, application programming interface (API)) ##
+
+When people and systems need to communicate, they use something called an **interface**. An interface is the part of the system where two things meet and exchange information. You use interfaces every day, even if you don’t notice. For example, when you click a button on a website, that button is part of a user interface. When two computers send data over the internet, the network card and cable are part of a network interface. 
+
+In cybersecurity, interfaces are important because they are often the first place attackers try to break in. If an interface doesn’t check the data it receives properly, or if it gives away too much information, it can become a security risk. That’s why testing interfaces is one of the basic jobs for anyone securing a system.
+
+One type of interface is the **Graphical User Interface**, or GUI. This is the part of a program that users can see and click on, like buttons, forms, checkboxes, and menus. In security testing, checking the GUI means making sure it doesn’t allow anyone to type in harmful input, like special characters that could attack the database, and that it doesn’t show sensitive information by mistake.
+
+Another type is the **Command Line Interface**, or **CLI**. This is where users type text commands instead of clicking on things. You’ll often see this used on servers or technical systems. In this case, testing means checking if the commands require the right permissions, if error messages are too helpful to an attacker, and if the system blocks invalid or dangerous commands.
+
+A third important type is **API interfaces**. APIs let two programs talk to each other, often over the internet, without a human involved. For example, a mobile banking app uses an API to ask the bank’s server for your balance. There are different kinds of APIs, like REST APIs (common on websites), RPC (Remote Procedure Calls), and IPC (Inter-Process Communication). Testing APIs is very important in security, because if the API accepts the wrong data or has weak security checks, attackers could steal data or control the system.
+
+:bulb: **REST APIs** are the most common type you’ll find on the web. “REST” stands for Representational State Transfer. These APIs usually work over HTTP or HTTPS — the same way websites do — and use URLs to send requests and responses, often in formats like JSON or XML. For example, when a mobile app checks your bank balance, it is usually sending a REST API request to the bank’s server. Security issues happen when the server does not properly check the data it receives, or if the system sends back more information than it should (this is called “data leakage”). If an attacker finds out that the API accepts unexpected inputs, they can often send crafted requests to read, change, or even delete data they shouldn’t be able to access.
+
+**RPC**, or Remote Procedure Call, is another type of API. Instead of using URLs and resources like REST, RPC works by calling functions or procedures directly on a remote system — as if the function were local, even though it’s on another computer. This is faster and more direct but can be riskier. If an attacker can trigger a function remotely, especially one that changes data or performs admin-level tasks, they could cause a lot of damage. Testing RPC interfaces means making sure only authorized users can call these functions, and that the data being sent is validated before the remote server acts on it.
+
+**IPC**, or Inter-Process Communication, is used when two software processes need to talk to each other on the same system or within a local environment. This is not usually across the internet but still very important, especially in operating systems or between security tools. IPC can use methods like shared memory, message queues, or sockets. If an attacker can hijack IPC communication or inject fake data, they might control a trusted process or crash a critical part of the system.
+
+
+**Web interfaces** are another area of focus. When you visit a website and log in, or click on links, you’re using a web interface. Hackers often try to attack web interfaces by sending special input that the system doesn’t expect, which can cause it to behave badly. Testing here involves checking if the site handles wrong or malicious data safely, and whether security features like encryption are working.
+
+**Network interfaces** are the parts of a device that connect to other computers. For example, your Wi-Fi adapter or network cable port. Testing network interfaces often involves scanning for open ports, checking which services are running, and making sure only the correct traffic is allowed in and out.
+
+Last but not least are **physical interfaces**. These are real-world connections like USB ports or cables. A hacker could try to plug a malicious USB into a server or computer. Testing these interfaces helps check that the system can handle bad hardware connections safely, or that only trusted people can access those ports.
+
+Testing interfaces is about more than just making sure the system “works” — it’s about making sure the system stays safe even when someone is trying to break it. Many attacks begin by finding weaknesses in the way systems communicate, so careful testing of all interfaces helps catch problems before attackers do.
+
+:necktie: When testing interfaces, you should always ask:
+Can the system handle wrong or strange data without crashing or misbehaving?
+Does the system give away information that it shouldn’t?
+Are all communications secure and properly checked?
+If the answer is “no” to any of these questions, the interface could be a security risk.
+
+### Open Questions ###
+
+1. What is an interface in the context of computing and cybersecurity?  
+<details>
+  <summary>Show answer</summary>
+An interface is the part of a system where two things — like a person and a program, or two computers — meet and exchange information. Interfaces are everywhere, from buttons on websites to network ports.
+</details>
+
+2. Why are interfaces important to test in cybersecurity?  
+<details>
+  <summary>Show answer</summary>
+Interfaces are important to test because they are often the first place attackers try to break in. If an interface accepts bad data or gives too much information away, hackers can use that to attack the system.
+</details>
+
+3. What is a Graphical User Interface (GUI) and how can it become a security risk?  
+<details>
+  <summary>Show answer</summary>
+A Graphical User Interface (GUI) is the part of a program that users see and interact with, like buttons and forms. If the GUI doesn’t handle input safely, a hacker could type harmful data and trick the system.
+</details>
+
+4. What is a Command Line Interface (CLI) and why should it be tested?  
+<details>
+  <summary>Show answer</summary>
+A Command Line Interface (CLI) is where users type commands instead of clicking with a mouse. Testing ensures only authorized users can use commands and that dangerous or invalid commands are properly blocked.
+</details>
+
+5. What do APIs do and why is testing them important for security?  
+<details>
+  <summary>Show answer</summary>
+APIs allow programs to communicate and share data. If APIs are not tested carefully, attackers might send fake or harmful requests and gain unauthorized access to data or system functions.
+</details>
+
+6. What is a REST API and how could an attacker abuse it?  
+<details>
+  <summary>Show answer</summary>
+REST APIs send requests over the web using URLs and formats like JSON. If an attacker sends unexpected or fake data, they might get private information or change data they are not allowed to.
+</details>
+
+7. How is RPC (Remote Procedure Call) different from REST, and what risks does it bring?  
+<details>
+  <summary>Show answer</summary>
+RPC lets one program call a function on another computer directly. If this isn’t secured, an attacker might trigger dangerous functions remotely and take control or damage the system.
+</details>
+
+8. What is Inter-Process Communication (IPC) and why could it be dangerous?  
+<details>
+  <summary>Show answer</summary>
+IPC allows two processes on the same system to talk to each other. If a hacker hijacks this communication, they could trick the system into doing something it shouldn’t or cause it to crash.
+</details>
+
+9. Why are web interfaces a common target for attackers?  
+<details>
+  <summary>Show answer</summary>
+Web interfaces are often attacked because users enter data directly. If the system doesn’t check this data correctly, attackers can send malicious inputs and take advantage of the website.
+</details>
+
+10. What are physical interfaces, and how can they be tested for security?  
+<details>
+  <summary>Show answer</summary>
+Physical interfaces, like USB ports, can allow attackers to plug in harmful devices. Security testing helps check if the system can block untrusted hardware or alert users to suspicious physical connections.
+</details>
+
+## 6.2.9 Breach attack simulations ##
+
+Breach and Attack Simulation (BAS) is a security testing approach where automated tools continuously simulate real-world cyberattacks against your systems to test whether your defenses are working properly. Unlike traditional vulnerability scanning, which focuses on finding weaknesses in software or configurations, BAS tools behave more like real attackers — running attack scenarios that mimic malware infections, privilege escalation, lateral movement, data exfiltration, and more.
+
+The purpose of BAS is to give security teams constant, realistic feedback on how effective their security controls are. It’s no longer enough to rely on annual penetration tests or basic vulnerability scans — attackers are working 24/7, so defenses must be tested just as often. BAS platforms make this possible by running tests in a controlled and repeatable way, without harming the production environment.
+
+When a BAS tool runs, it uses scripts or agents to simulate different parts of an attack chain — for example, trying to send malicious payloads through email, testing firewall rules, exploiting lateral movement paths in the internal network, or checking if endpoint protection can stop known ransomware samples. These simulations allow companies to see where gaps exist in their prevention, detection, and response processes — and fix them before real attackers arrive.
+
+:link: There are several popular BAS products on the market today. Some well-known names include:
+- AttackIQ: [https://www.attackiq.com/](https://www.attackiq.com/)
+- SafeBreach: [https://www.safebreach.com/](https://www.safebreach.com/)
+- XM Cyber: [https://xmcyber.com/](https://xmcyber.com/)
+- Picus Security: [https://www.picussecurity.com/](https://www.picussecurity.com/)
+- Cymulate: [https://cymulate.com/](https://cymulate.com/)
+
+You can roughly group BAS simulations by the target (what the attacker is trying to reach) or the vector (the method used to reach it).
+
+| Focus Area | Examples / Typical Targets |
+|------------|---------------------------|
+| **By Target** | - Endpoint testing (workstations, laptops, servers)  <br> - Network infrastructure (routers, switches, firewalls)  <br> - Cloud services (AWS, Azure, Google Cloud)  <br> - Active Directory / Identity systems  <br> - Web applications and APIs  <br> - Databases and storage systems |
+| **By Vector** | - Email-based attacks (phishing, malicious attachments)  <br> - Web-based attacks (drive-by downloads, command injection)  <br> - Lateral movement (using stolen credentials or exploits to move inside the network)  <br> - Malware execution and evasion (testing antivirus and EDR detection)  <br> - Data exfiltration (detecting if sensitive data can leave the network unnoticed) |
+
+:necktie: BAS helps turn security assumptions into facts. It answers important questions like: Are my detection rules working? Will my EDR actually stop this attack? Is lateral movement possible from a compromised user account? Instead of waiting for a real breach or a red team engagement once a year, BAS offers continuous validation and measurable improvement of your security posture.
+
+### Open Questions ###
+
+1. What is the main goal of Breach and Attack Simulation (BAS)?
+
+<details> <summary>Show answer</summary> The main goal of BAS is to simulate real-world cyberattacks in a safe, automated way to check if your security systems can prevent, detect, and respond correctly before real attackers strike. </details>
+
+2. How is BAS different from traditional vulnerability scanning?
+
+<details> <summary>Show answer</summary> Unlike vulnerability scanning, which looks for known weaknesses in software or configurations, BAS actively simulates attacker behavior — testing the full attack path including malware, lateral movement, and data theft. </details>
+
+3. Why is it important to run BAS tools continuously instead of only once or twice a year?
+
+<details> <summary>Show answer</summary> Attackers can target systems at any time, not just once a year, so continuous BAS testing ensures security teams catch weaknesses early, measure their defenses, and close gaps before a real incident happens. </details>
+
+4. What kinds of attack scenarios can BAS tools simulate?
+
+<details> <summary>Show answer</summary> BAS tools can simulate many attack scenarios such as phishing emails, malware infections, privilege escalation, firewall evasion, lateral movement, and even data exfiltration, helping expose weaknesses across systems. </details>
+
+5. How can BAS simulations be categorized to better understand security testing?
+
+<details> <summary>Show answer</summary> BAS simulations can be categorized by their target (like endpoints, cloud services, or web apps) or by the attack vector used (like phishing, malware, or lateral movement), which helps structure security testing efforts. </details>
+
+---
+
+## 6.2.10 Compliance Checks ##
+
+Compliance checks are an essential part of any organization’s security strategy. Their goal is simple: to make sure that the systems, processes, and data handling practices inside a company meet the rules set by governments, regulators, and industry bodies. These rules are often there to protect customers, ensure privacy, and make sure sensitive data is handled responsibly.
+
+:necktie: Compliance isn’t just about avoiding fines — it’s about proving that your security efforts match an accepted standard, which builds trust with customers and partners. 
+
+:necktie: One of the first things to understand about compliance is that it heavily depends on where your organization operates. Different countries (and sometimes different regions within a country) have different laws about how data must be handled.
+
+This means cybersecurity teams can’t apply a single checklist everywhere. The laws that apply in Germany are not the same as those in California or Singapore. Part of running compliance checks is knowing the geography of your data and systems — and matching that to the correct set of rules.
+
+Compliance is also highly industry-dependent. Each sector has its own specific concerns and risks, so different rules apply. Here are a few common examples:
+- Finance: Financial companies often deal with credit card details, personal IDs, and banking information, which makes standards like PCI-DSS (Payment Card Industry Data Security Standard) extremely important. In banking, regulations like SOX (Sarbanes-Oxley Act) and GLBA (Gramm-Leach-Bliley Act) apply.
+- Healthcare: Hospitals and clinics handle deeply sensitive medical records, which are covered by HIPAA in the U.S. and GDPR in Europe.
+- Retail: Any company that processes payments must comply with PCI-DSS, while e-commerce platforms must consider local consumer protection and privacy laws.
+- Public Sector: Governments often require compliance with national cybersecurity frameworks, like NIST 800-53 or ISO 27001.
+
+Because every industry has its own data types and risks, compliance checks must always reflect the context of the business, not just general security best practices.
+
+Running a compliance check isn’t only about reviewing documents. It’s a mix of technical audits, process reviews, and human verification. Here’s how security teams usually approach it:
+
+| Step                          | Description |
+|-------------------------------|-------------|
+| **Understand the Requirements** | First, the team must clearly know which regulation applies to the company. Sometimes this involves multiple overlapping rules (for example, both GDPR and PCI-DSS if you store European user data and process payments). Each regulation will have specific controls and security expectations. |
+| **Map Requirements to Systems** | Next, you map the legal or industry requirements to the specific parts of your IT environment. For example: <br>• If GDPR says you must secure personal data, you check which databases hold that data. <br>• If PCI-DSS demands encryption, you verify the encryption setup for payment systems. |
+| **Collect Evidence** | Compliance checks require proof. It’s not enough to say “we encrypt our data” — you must provide logs, screenshots, audit trails, or automated test results that show the encryption is active and working. |
+| **Automated Scanning and Manual Audits** | Many companies use automated tools to continuously monitor for compliance violations (for example, misconfigured cloud storage or unpatched systems). These tools help flag common errors. However, a human still needs to review policies, procedures, and some security controls manually, especially around incident response and access management. |
+| **Gap Analysis and Reporting** | After the check, the team prepares a gap report that shows where the company is compliant and where fixes are needed. This report is usually shared with management or compliance officers, who assign priorities and resources for fixing the gaps. |
+| **Documentation and Certification** | In many cases, once a company meets compliance, the proof is formalized as a certificate or attestation. Auditors, security teams, and sometimes external consultants are involved in this step. |
+
+### Open Questions ###
+
+1. What is the main goal of a compliance check in cybersecurity?  
+<details>
+  <summary>Show answer</summary>
+The goal is to verify that your systems, processes, and data handling meet specific security and privacy rules set by governments, industry standards, or contracts. It helps ensure you’re following the law and protecting sensitive information.
+</details>
+
+2. Why are compliance requirements different depending on your location?  
+<details>
+  <summary>Show answer</summary>
+Laws and regulations are created by governments, and each country or region has its own legal requirements. For example, GDPR applies in Europe, while U.S. companies might need to meet HIPAA or SOX depending on their business.
+</details>
+
+3. How does your industry affect which compliance rules you must follow?  
+<details>
+  <summary>Show answer</summary>
+Different industries face different risks, so the rules are tailored to the business. Financial institutions follow standards like PCI-DSS or SOX, while healthcare providers must meet HIPAA and data protection laws for patient information.
+</details>
+
+4. What’s the difference between a vulnerability scan and a compliance check?  
+<details>
+  <summary>Show answer</summary>
+A vulnerability scan focuses on finding technical weaknesses in systems, like unpatched software or open ports. A compliance check verifies whether your entire environment, including policies and procedures, meets the required rules.
+</details>
+
+5. What are the first two steps in running a compliance check?  
+<details>
+  <summary>Show answer</summary>
+First, you identify which regulations apply to your business. Second, you map those regulations to your technical systems, policies, and teams so you can properly check if you meet the requirements.
+</details>
+
+6. Why is collecting evidence important in a compliance check?  
+<details>
+  <summary>Show answer</summary>
+Compliance requires proof that security controls are in place and working. Evidence can include system logs, policy documents, audit reports, or screenshots to demonstrate compliance to regulators or auditors.
+</details>
+
+7. Can compliance checks be fully automated?  
+<details>
+  <summary>Show answer</summary>
+Some parts of compliance checks can be automated, like scanning systems for misconfigurations or missing patches, but a human is still needed to review policies, assess risks, and check if procedures are being followed.
+</details>
+
+8. What happens after a compliance check finds a problem?  
+<details>
+  <summary>Show answer</summary>
+If a compliance check finds a problem, the issue is recorded and reported as a "gap" that must be fixed. Once all gaps are addressed, the company can pass an audit and show regulators or customers that it meets the required standards.
+</details>
 
 
