--- a/DOMAIN6: Security Assessment and Testing/6.3 Collect security process data (e.g., technical and administrative).md
+++ b/DOMAIN6: Security Assessment and Testing/6.3 Collect security process data (e.g., technical and administrative).md
@@ -1,4 +1,4 @@
-## Account management ##
+## 6.3.1 Account management ##
 
 Account Management is the set of processes and controls used to create, monitor, update, and delete user accounts in an IT environment. Whether you're dealing with a corporate network, cloud platforms, or physical access systems, proper account management ensures that only the right people have the right access at the right time.
 
@@ -94,3 +94,232 @@ Many security frameworks and standards explicitly require management to perform 
 <details> <summary>Show answer</summary> In SOC 2 audits, management must show evidence that they review and monitor the effectiveness of security controls. Auditors often ask for meeting minutes, reports, or signatures proving this oversight happened. </details>
 
 ---
+
+## 6.3.3 Key performance and risk indicators ##
+
+A **Key Performance Indicator (KPI)** is a number or metric that shows how well a team, system, or process is performing compared to its expected goals. In cybersecurity, KPIs help you see if you’re doing the right things to maintain security, and if your operations are efficient.
+
+KPIs are used to measure everyday performance. For example:
+- "How fast are we patching security vulnerabilities?"
+- "How many security incidents were detected and resolved this month?"
+- "How long does it take to detect a threat?" (often called Mean Time To Detect, or MTTD)
+- "How long does it take to fix a problem after detection?" (Mean Time To Respond, or MTTR)
+
+:brain: A good KPI tells you: Are we keeping the promises we’ve made to protect the organization?
+
+A Key Risk Indicator (KRI) is a metric that shows the likelihood or early signs of risk — meaning something is about to go wrong, or the environment is becoming unsafe. Where KPIs focus on measuring performance, KRIs focus on spotting danger.
+
+In cybersecurity, examples of KRIs could be:
+- "The number of unpatched critical vulnerabilities." If this number goes too high, you’re at serious risk of being attacked.
+- "The number of failed login attempts." A spike might signal a brute-force attack is happening.
+- "The percentage of users who fail phishing simulations." A high rate means attackers could likely succeed in a real-world phishing attempt.
+- "The number of misconfigured cloud storage buckets." Misconfigurations often lead to data breaches.
+
+:brain: KRIs help answer the question: Are we heading toward a security failure?
+
+The following are some best-practices in real-world security management:
+
+| Step | Description |
+|------|-------------|
+| **Pick the right metrics** | Don’t track everything — focus on what matters to your organization. Each business will have different security needs. |
+| **Set clear thresholds** | For example, a KRI might trigger an alert if more than 5% of systems have critical vulnerabilities. A KPI might set a target of patching 90% of vulnerabilities in under 7 days. |
+| **Automate measurement** | Use security tools, logs, dashboards, and monitoring platforms to track KPIs and KRIs in real-time. |
+| **Share the data with the right people** | KPIs and KRIs should be reviewed regularly by both security teams and management, so the whole company knows where improvements are needed or where risks are increasing. |
+| **Take action** | If a KPI shows you're not meeting goals, or a KRI shows danger is rising, it’s time to adjust your process or add new defenses. |
+
+:necktie: In cybersecurity, KPIs and KRIs give you two sides of the same story: performance and risk. Good performance doesn’t always mean low risk, and low risk doesn’t always mean the team is performing at its best.
+For example, you could have no security incidents (low risk) for months — but your KPI might reveal that patches are delayed, firewalls haven’t been updated, or backups are failing silently. This situation is dangerous, even if nothing bad has happened yet.
+
+### Open Questions ###
+
+1. What is the main purpose of a Key Performance Indicator (KPI) in cybersecurity?
+
+<details> <summary>Show answer</summary> A Key Performance Indicator (KPI) shows how well a security process is performing, helping teams check if they are meeting their goals, such as patching vulnerabilities on time or responding quickly to incidents. </details>
+
+2. How is a Key Risk Indicator (KRI) different from a KPI?
+
+<details> <summary>Show answer</summary> A KRI warns about rising risks or early signs of possible security problems, while a KPI focuses on measuring daily performance against set targets. </details>
+
+3. Can you give an example of a KPI and a KRI for patch management?
+
+<details> <summary>Show answer</summary> A KPI for patch management could be: "90% of critical patches are installed within 7 days." A KRI could be: "More than 20 systems have critical unpatched vulnerabilities," which signals higher risk. </details>
+
+4. Why is it important to set clear thresholds for KPIs and KRIs?
+
+<details> <summary>Show answer</summary> Clear thresholds help teams understand when a metric is normal and when it signals a problem, allowing them to respond early and prevent incidents before they escalate. </details>
+
+5. Why should both security teams and management review KPI and KRI reports regularly?
+
+<details> <summary>Show answer</summary> Regular review ensures that both the technical teams and business leaders know where the organization stands in terms of security performance and risk, so decisions can be made based on real data, not assumptions. </details>
+
+----
+
+## 6.3.4 Backup verification data ##
+
+In cybersecurity, backups are one of the last lines of defense when something goes wrong — whether it’s a ransomware attack, accidental deletion, hardware failure, or a natural disaster. But having backups is only part of the solution. The real question is: will the backups actually work when you need them?
+
+:bulb: Many organizations make the mistake of assuming that just because a backup job completed, the data is safe. In reality, backups can become corrupted, incomplete, or even unusable without anyone noticing — until it’s too late. That’s why verifying your backup data is critical.
+
+Verification means actively testing your backups to make sure the files can be read, restored, and used as expected. This should be done on a regular schedule, not just once. It helps spot problems early, like:
+- Files that were skipped or failed to copy.
+- Backups that look complete but can’t be restored.
+- Encryption or compression errors.
+- Storage device failures (bad sectors, disk corruption).
+
+When a real crisis hits, verified backups can make the difference between a quick recovery and a total disaster.
+Best Practices for Backup Verification are:
+1. Test Restores Regularly. Pick random backups and restore them to a test environment. Make sure the files open, the system boots, or the database runs — depending on what you backed up.
+2. Use Checksums or Hashes. Some backup software can calculate hashes or checksums during the backup and verify them during restore. This ensures the data wasn't silently damaged during storage or transfer.
+3. Automate Verification When Possible. Modern backup systems can automatically check for data corruption after writing. Enable these features and schedule regular checks.
+4. Document and Audit Backup Tests. Like any other security control, backups need clear documentation. Keep records of test results and review them during security audits.
+
+:bulb: No matter the media, always follow the 3-2-1 Rule: 3 copies of your data, on 2 different media types, with 1 copy offsite.
+
+### Open Questions ###
+
+1. Why is it not enough to just create backups without verifying them?
+
+<details> <summary>Show answer</summary> Because a backup can look complete but still be corrupted, incomplete, or unusable. Verification ensures the data can actually be restored when needed. </details>
+
+2. What is the purpose of performing test restores on backup data?
+
+<details> <summary>Show answer</summary> Test restores help confirm that the backup data is valid, complete, and ready for recovery in case of an emergency. They simulate real-world restore situations. </details>
+
+3. Name one method that backup systems can use to automatically check for data corruption.
+
+<details> <summary>Show answer</summary> Backup systems can use checksums or hash values to detect whether data has been changed, damaged, or corrupted during backup or storage. </details>
+
+4. Why is it important to use different types of storage media for backups?
+
+<details> <summary>Show answer</summary> Using different types of media (like disks, tapes, and cloud storage) lowers the risk of losing all backups due to hardware failure, ransomware, or other single points of failure. </details>
+
+5. How do retention periods help in managing backups safely and effectively?
+
+<details> <summary>Show answer</summary> Retention periods define how long backups should be kept, helping organizations balance storage costs, legal requirements, and the need to recover from past incidents. </details>
+
+
+
+
+---
+
+## 6.3.5 Training and awareness ##
+
+Training and awareness are two of the most important tools for protecting an organization from security risks. Even the best firewalls, encryption, and security tools can fail if employees make simple mistakes like clicking on phishing emails, using weak passwords, or accidentally sharing sensitive data. That’s why people are often called the "weakest link" in cybersecurity. Good training and awareness help turn that weakness into strength.
+
+**Training** is about teaching people specific skills. For example: how to create a strong password, how to report a suspicious email, or how to securely handle customer data. Training is usually more formal and can include classes, online courses, or hands-on exercises.
+
+**Awareness** is about making sure people understand the importance of security and stay alert in their daily work. Awareness is often built through short messages, posters, reminders, and real-world examples of security incidents. It helps create a security-conscious culture.
+
+Planning a training and awareness program starts with understanding the organization’s risks. If employees handle sensitive data, training should focus on secure data handling. If phishing is a common problem, focus on email security. Training needs to match real risks.
+
+The steps for planning an effective training program are:
+
+```mermaid
+
+flowchart LR
+    A[Risk Assessment] --> B[Audience Segmentation]
+    B --> C[Learning Objectives]
+    C --> D[Training Methods]
+    D --> D1[Instructor-led training]
+    D --> D2[Online e-learning modules]
+    D --> D3[Simulated phishing tests]
+    D --> D4[Policy and procedure reviews]
+    D --> D5[Security newsletters or short videos]
+    D --> E[Scheduling]
+    E --> E1[Regular sessions - yearly/quarterly]
+    E --> E2[Continuous awareness activities - monthly tips, case discussions]
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
+To improve, you must measure. Some useful metrics to evaluate the effectiveness of training include:
+
+| Metric                     | Description                                                                                   |
+|-----------------------------|-----------------------------------------------------------------------------------------------|
+| Phishing click rates        | Before and after a training program, monitor how many employees fall for test phishing emails. A lower rate shows improved awareness. |
+| Incident reporting          | Are employees reporting more suspicious activity? Higher reporting usually shows growing security awareness. |
+| Quiz or test results        | After training, run short tests to check understanding.                                      |
+| Policy compliance rates     | Are people following password, encryption, and access policies more consistently?            |
+| Audit findings              | A drop in security-related audit failures can show the training is working.                  |
+
+:necktie: Good training and awareness programs don’t end after a single session. Continuous improvement is key. Security threats evolve, so training needs to evolve too.
+
+### Open Questions ###
+
+1. Why are training and awareness important in cybersecurity?
+
+<details> <summary>Show answer</summary> Training and awareness are important because even the best technical defenses can fail if people make mistakes, like clicking on phishing links or using weak passwords. Educated employees reduce human risk. </details>
+
+2. What is the difference between security training and security awareness?
+
+<details> <summary>Show answer</summary> Training focuses on teaching specific skills (like how to handle data or report incidents), while awareness focuses on helping people stay alert and think about security in their daily work. </details>
+
+3. How should an organization decide what topics to cover in its security training?
+
+<details> <summary>Show answer</summary> An organization should first identify its main security risks and threats through risk assessments, and then create training that helps employees avoid or handle those specific risks. </details>
+
+4. Why is it important to adjust training for different roles in the company?
+
+<details> <summary>Show answer</summary> Different roles face different risks, so training must be customized. For example, system administrators need technical knowledge, while HR staff must understand data privacy and phishing prevention. </details>
+
+5. What are some common methods used to deliver security awareness?
+
+<details> <summary>Show answer</summary> Awareness can be built using posters, newsletters, short videos, reminder emails, team discussions, and real-world examples of security incidents. These methods help keep security on people's minds. </details>
+
+6. How can simulated phishing emails help improve security awareness?
+
+<details> <summary>Show answer</summary> Simulated phishing emails test whether employees can spot fake or suspicious messages. This helps organizations measure awareness and gives people safe, real-world practice at recognizing attacks. </details>
+
+7. Why should security training and awareness be continuous, not just one-time?
+
+<details> <summary>Show answer</summary> Cyber threats evolve all the time, so security training needs to be regular and ongoing. A one-time course isn’t enough to build strong habits or stay prepared for new attack techniques. </details>
+
+8. What are useful metrics to measure the success of a security training program?
+
+<details> <summary>Show answer</summary> Useful metrics include phishing click rates, test or quiz scores, how often employees report suspicious activity, how many policy violations are found, and whether audit results improve over time. </details>
+
+---
+
+
+## 6.3.6 Disaster Recovery (DR) and Business Continuity (BC) ##
+
+Disaster Recovery (DR) and Business Continuity (BC) plans are written to help organizations survive serious problems — like cyberattacks, hardware failures, natural disasters, or even human mistakes. These plans describe the steps to recover critical systems and continue serving customers, even if the business is facing a major disruption.
+
+But just writing these plans isn’t enough. If you don’t test them, you won’t know whether they actually work. Testing shows if the plan is realistic, complete, and if everyone knows what to do in an emergency. Many businesses have learned the hard way that a plan can look perfect on paper but still fail during a real disaster, simply because it was never tested properly.
+
+Testing helps identify missing steps, unclear instructions, outdated contact lists, or technical issues with backup systems before a real crisis hits. It also helps train employees on their roles, making sure that when something goes wrong, people stay calm and follow the process.
+
+There are different ways to test a DR or BC plan. Some are simple, like a tabletop exercise, where team members talk through a scenario to see how the plan holds up. Others are more advanced, like full recovery simulations, where systems are shut down and restored to verify everything actually works as planned.
+
+Testing should also include checking how quickly systems can be recovered (called RTO — Recovery Time Objective) and whether the recovered data is correct and complete (called RPO — Recovery Point Objective). Without these checks, you risk wasting time during a real event or, worse, restoring bad or old data.
+
+Another reason to test is that people, systems, and business processes change over time. A plan that worked fine two years ago might fail today if new software or new staff members weren’t considered.
+
+:necktie: Testing DR and BC plans turns theory into practice. It builds confidence, helps find weaknesses before attackers or disasters do, and increases the chances that your organization can recover smoothly and stay in business no matter what happens.
+
+### Open Questions ###
+
+Why is testing a Disaster Recovery (DR) and Business Continuity (BC) plan important?
+
+<details> <summary>Show answer</summary> Testing a DR and BC plan is important because it proves whether the plan actually works during a real incident, helping identify gaps and improving team readiness. </details>
+
+What could happen if a DR or BC plan is not tested regularly?
+
+<details> <summary>Show answer</summary> If the plan is not tested, the organization risks being unprepared for a real disaster, which can cause longer outages, data loss, and financial or reputational damage. </details>
+
+How often should an organization test its DR and BC plans?
+
+<details> <summary>Show answer</summary> A good rule is to test the plans at least once a year, but testing should also happen after major system changes, staff changes, or after real incidents to improve the plan. </details>
+
+What are some common ways to test a DR or BC plan?
+
+<details> <summary>Show answer</summary> DR and BC plans can be tested with tabletop exercises, partial failover tests, or full system recovery simulations to check how well systems and teams respond. </details>
+
+Why is it important to test Recovery Time Objective (RTO) and Recovery Point Objective (RPO) during DR tests?
+
+<details> <summary>Show answer</summary> Testing RTO and RPO ensures the company can restore services fast enough and without unacceptable data loss, meeting business and compliance expectations. </details>
+
+---
+
+
